# HOMME_NGGPS_benchmark

./: README.md  baroclinic_inst_mod.F90  nggps_ne256.nl  nggps_ne32.nl  setup.sh
inputs/: large.nl  medium.nl  nggps_ne256.nl  nggps_ne32.nl  nggps_ne8.nl  small.nl
scripts/: rel_diff  timing  verify
source/: optimized  original
source/dungeon28/: CMakeLists.txt  MACHINES  SVN_EXTERNAL_DIRECTORIES
source/dungeon28/bld/cmake_scripts/: chester-pgifortran.sh  customFlags.cmake.gpu  env_mach_specific.openacc  hopper-gnu-fi.sh  hopper-reg_build.sh  linux-gnu-swim.sh  titan-gnu-fi-newtrilinos.sh  titan_pgi_imp_cpu.sh
source/dungeon28/cmake/: HommeMacros.cmake  SetCompilerFlags.cmake
source/dungeon28/cmake/machineFiles/: corip2.cmake  laramieIntel.cmake
source/dungeon28/cmake/queueSubHeaders/: lsf.sh  slurm.sh
source/dungeon28/doc/: HOMME_Description.tex  README.io  Readme.multipleanalysis
source/dungeon28/libs/netcdf_stubs/: netcdf_dims.f90  netcdf_expanded.f90  netcdf_variables.f90
source/dungeon28/physics/: multicloud_mod.F90
source/dungeon28/physics/heldsuarez/: held_suarez_mod.F90
source/dungeon28/src/: NOTES  advance_mod.F90  asp_tests.F90  baroclinic_inst_mod.F90  common_movie_mod.F90  cwfv_bench_mod.F90  cwfv_main.F90  cwfv_mod.F90  dcmip_123_mod.F90  dcmip_wrapper_mod.F90  dg3d_core_mod.F90  dg3d_dynamics_mod.F90  dg3d_main.F90  dg3d_prim_mod.F90  dg3d_primeq_mod.F90  dg_core_mod.F90  dg_main.F90  dg_sweq_mod.F90  dg_tests_mod.F90  dg_tvdrk_mod.F90  forcing_mod.F90  fvm_bench_mod.F90  fvm_init_mod.F90  fvm_main.F90  implicit_mod.F90  init_mod.F90  interp_movie_mod.F90  interpolate_driver_mod.F90  main.F90  precon_mod.F90  prim_main.F90  prim_movie_mod.F90  prim_restart_mod.F90  ref_state_mod.F90  repro_sum_mod.F90  restart_io_mod.F90  rk_mod.F90  shal_movie_mod.F90  shallow_water_mod.F90  spelt_bench_mod.F90  (+2 more)
source/dungeon28/src/fvm/: CMakeLists.txt
source/dungeon28/src/preqx/: CMakeLists.txt
source/dungeon28/src/prim/: CMakeLists.txt
source/dungeon28/src/primdgx/: CMakeLists.txt
source/dungeon28/src/share/: bndry_mod.F90  cg_mod.F90  control_mod.F90  cube_mod.F90  cuda_mod.F90  derivative_mod.F90  diffusion_mod.F90  dimensions_mod.F90  dof_mod.F90  domain_mod.F90  edge_mod.F90  element_mod.F90  filter_mod.F90  fvm_analytic_mod.F90  fvm_bsp_mod.F90  fvm_consistent_se_cslam.F90  fvm_control_volume_mod.F90  fvm_line_integrals_flux_mod.F90  fvm_line_integrals_mod.F90  fvm_mod.F90  fvm_reconstruction_mod.F90  global_norms_mod.F90  hybvcoord_mod.F90  interpolate_mod.F90  kinds.F90  mass_matrix_mod.F90  namelist_mod.F90  perfmodel_mod.F90  physical_constants.F90  physics_mod.F90  prim_advance_mod.F90  prim_advection_mod.F90  prim_derived_type_mod.F90  prim_driver_mod.F90  prim_implicit_mod.F90  prim_si_mod.F90  prim_si_ref_mod.F90  prim_state_mod.F90  quadrature_mod.F90  reduction_mod.F90  (+7 more)
source/dungeon28/src/spelt/: CMakeLists.txt
source/dungeon28/src/swdgx/: CMakeLists.txt
source/dungeon28/src/sweqx/: CMakeLists.txt
source/dungeon28/src/swim/: CMakeLists.txt
source/dungeon28/test/: CMakeLists.txt
source/dungeon28/test/DCMIP/: CMakeLists.txt
source/dungeon28/test/DCMIP/DCMIP1-1/SCRIPTS/: CMakeLists.txt  dcmip1-1_error_norms.ncl  dcmip1-1_lat_lon.ncl
source/dungeon28/test/DCMIP/DCMIP1-2/NAMELISTS/: CMakeLists.txt  DCMIP1-2_NE120.nl  DCMIP1-2_NE30.nl  DCMIP1-2_NE8.nl
source/dungeon28/test/dg_adv_3d/: Makefile.Linux  input.nl
source/dungeon28/test/dg_heldsuarez/: Makefile  Makefile.AIX  input.nl  input_hs.nl
source/dungeon28/test/dg_jwbcl/: explicit.nl  input.nl
source/dungeon28/test/fvmtest/: FVM.tmproj
source/dungeon28/test/jw_baroclinic/: debug-sub3rk.out
source/dungeon28/test/mesh_refine/: jwbaro_refine.py  polvani_refine.py  shallow_water.py
source/dungeon28/test/modules/mesh_mod/: Makefile.am  configure.ac
source/dungeon28/test/perftest/: camBench.nl  camInput.nl  perf_input.sed  stampede_sbatch.sed
source/dungeon28/test/python/: example_run.py  globalvars.py  homme.py  homme_utils.py
source/dungeon28/test/reg_test/: CompareTwo.sh
source/dungeon28/test/sw_conservative/: swtc5_bd.nl  swtc5_imp_suite.bash
source/dungeon28/test/swdg/: Makefile  Makefile.Linux  explicit1.nl  explicit2.nl  explicit5.nl  galewsky.nl  input1.nl  input2.nl  input2_debug.nl  input5.nl  prun.lsf  swtc1.ncl
source/dungeon28/test_execs/: CMakeLists.txt
source/dungeon28/test_execs/perfTestWACCM/: CMakeLists.txt
source/dungeon28/test_execs/preqx_L64/: CMakeLists.txt
source/dungeon28/utils/CUBIT_scripts/: README
source/dungeon28/utils/GECoRe/: Announce.h  CommandLine.h  CubedSphereGrid.h  CubedSphereTrans.cpp  CubedSphereTrans.h  HOMMEGrid.cpp  HOMMEGrid.h  HOMMEInterpolator.cpp  HOMMEInterpolator.h  Interpolator.cpp  Interpolator.h  LatitudeLongitudeGrid.cpp  LatitudeLongitudeGrid.h  Makefile  Preferences.cpp  Sample-Remap.pref  (+2 more)
source/ipcc05_patched/: MACHINES  Params.inc  SVN_EXTERNAL_DIRECTORIES
source/ipcc05_patched/bld/: Depends.pe.NI  Depends.pe.NMRI  Depends.pe.NO  Depends.pe.NTMR  Depends.primdg.NTMO  Depends.sw.SMR  Depends.sw.STI  Depends.sw.STMI  Depends.swdg.NT  Depends.swdg.NTMI  Depends.swim.NMR  Depends.swim.NMRI  Makefile.AIX  Makefile.Darwin.Absoft  Makefile.Darwin.g95  Makefile.Darwin.xlf  Makefile.Linux.BGL  Makefile.Linux.BGP  Makefile.Linux.fc7  Makefile.Linux.pgi  Makefile.Linux.rh  Makefile.Linux.tbird  Makefile.SunOS  Makefile.common  Makefile.pe  Makefile.primdg  Makefile.sw  Makefile.swdg  Makefile.swim
source/ipcc05_patched/doc/: HOMME_Users_Guide.tex  HOMME_Using_Refined_Meshes.tex  base.dox  mystylefile.sty
source/ipcc05_patched/src/: advance_mod.F90  prim_main.F90
source/ipcc05_patched/test/modules/mesh_mod/: Makefile.am  main.F90
source/ipcc05_patched/test_execs/: CMakeLists.txt
systems/: cheyenne.config  cori.config  yellowstone.config
verification/: large_optimized.txt  large_original.txt  medium_optimized.txt  medium_original.txt  ne256_optimized.txt  ne256_original.txt  ne32_optimized.txt  ne32_original.txt  ne8_optimized.txt  ne8_original.txt  small_optimized.txt  small_original.txt
(+350 files in other folders)
